[package]
name = "pong"
version = "0.1.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
sylt = { git = "https://github.com/FredTheDino/sylt-lang.git", branch = "main" }
sylt_macro = { git = "https://github.com/FredTheDino/sylt-lang.git", branch = "main" }

macroquad = "0.2"
