[package]
name = "pong"
version = "0.1.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
sylt = { git = "https://github.com/sylt-lang/sylt-lang.git", rev = "f9b6a64" }
sylt_macro = { git = "https://github.com/sylt-lang/sylt-lang.git", rev = "f9b6a64" }

macroquad = "0.2"
